Add GitHub OAuth with Arctic and global rate limiter for GET requests

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 # ".env" and populate it with your secrets.
 
 # Example:
-NODE_ENV=development
-DB_FILE_NAME=local.db
+NODE_ENV="development"
 
+DB_FILE_NAME="local.db"
+
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
