--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,10 @@
 
 # Example:
 NODE_ENV="development"
-
 DB_FILE_NAME="local.db"
 
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
