--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.35.3",
+    "input-otp": "^1.4.0",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
